change log

### 13.12.2017
- replaced the evaluate green to evaluate green with offset but have  offset 0 if not specified
- changed data storage of green function to include com time in filename

### 12.12.2017
- changed green function definition such that both have -i in front! also there was a mistake
- commented reduced energy in updateAll since it was only for test purposes
- and bugfix for initial green function value false convention!

### 05.12.2017
- added warning when correlations indices input is wrong
- extended correlations to all possible even numbers of operators
- added possibility to get creation and annihilation alone in reduced basis

### 04.12.2017
- removed print('a') if kred is empty!
- added density density correlation function to the parameters

### 29.10.2017
- added splitting into greater and lesser greensfunctions
- added entanglement spectrum to calculation parameters
- added a savetxt algorithm for the entanglement spectrum
- added the already scaled time to show up in the entanglement spectrum data header
- added plotmatrix again since it might be useful
- NOTE: for the future, rely more on savetxt and appending! see:
    https://stackoverflow.com/questions/27786868/python3-numpy-appending-to-a-file-using-numpy-savetxt

### 16.10.2017
- dft omits last point if number of datapoints is even

### 13.10.2017
- extended time_format by showing hours >= 100 and above 999h to show days automatically

### 12.10.2017
- added linebreak in progress.log after time evolution
- changed plotting to recognize what data is created (basically added if clause for reduced ent and occ)
- fixed dft frequencies to be correctly calculated
- fixed dft of greens function to get the correct sample spacing
- NOTE: DFT can only handle uneven numbers of datapoints, fix this!

### 10.10.2017
- fixed eta for green's function
- changed updateAll to be outside the if clause for storeData
- added config parameter for reduced entropy and occupation number

### 05.10.2017